[package]
name = "cursor-cat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.58"
device_query = "1.1.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "cursor-cat.exe"
LegalCopyright = "Copyright © Girkov Arpa 2022"
FileDescription = "Cursor Cat: Customizable mouse highlighter!"
ProductName = "Cursor Cat"
ProductVersion = "0.1.0"